--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,9 +1,111 @@
-$backgroundColor: #ffffff;
-$bodyColor: #000000;
+@import 'colors';
 $bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+
+/* This SCSS file covers everything in the default layout */
+
+* {
+  margin: 0;
+  padding: 0;
+}
 
 body {
   background: $backgroundColor;
   color: $bodyColor;
   font-family: $bodyFont;
+}
+
+/* Navigation Bar */
+
+nav {
+  overflow: hidden;
+  background-color: $bodyColor;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  color: $backgroundColor;
+
+  ul {
+    text-align: center;
+    list-style-type: none;
+    text-align: center;
+    margin: 0 1rem;
+    padding: 0.5rem;
+    display: flex;
+    align-items: center;
+    
+    li {
+      font-size: 1.15rem;
+      margin: 0rem 0.25rem;
+      
+      a {
+        color: $backgroundColor;
+        text-decoration: none;
+        padding: 0.75rem 1rem;
+        border-radius: 0.75rem;
+        
+        &:hover {
+          background-color: $accentColor;
+        }
+      }
+
+      button {
+        font-size: 1.5rem;
+        border: none;
+        color: $backgroundColor;
+        padding: 0.5rem;
+        border-radius: 0.75rem;
+        background-color: $bodyColor;
+        height: 49px;
+        width: 49px;
+        
+        &:hover {
+          background-color: $accentColor;
+        }
+      }
+    }
+
+    .title {
+      font-size: 1.75rem;
+      font-weight: bold;
+      width: 20rem;
+      text-align: center;
+
+      &:hover {
+        color: $accentColor;
+      }
+    }
+    
+  }
+}
+
+footer {
+  background-color: $bodyColor;
+  color: $backgroundColor;
+  text-align: center;
+  padding: 1.25rem;
+  margin: 1rem 0;
+
+  a {
+    color: $backgroundColor;
+      text-decoration: none;
+      padding: 0.75rem 1rem;
+      border-radius: 0.75rem;
+      
+      
+    &:hover {
+      background-color: $accentColor;
+    }
+  }
+
+  p {
+    margin-top: 0.75rem;
+    font-style: italic;
+  }
+}
+
+.hidden
+{
+    display: none !important;
 }
