--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -1,4 +1,4 @@
-$backgroundColor: #f7f7f7;
+$backgroundColor: #fafafa;
 $bodyColor: hsl(270, 6%, 13%);
-$accentColor: #df3e5e;
-$accentColor2: #64BEDF;
+$accentColor: #ce2f4e;
+$accentColor2: #67d6ff;
