--- a/_sass/games.scss
+++ b/_sass/games.scss
@@ -1,13 +1,36 @@
-@import 'colors';
-
 .games {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     list-style-type: none;
-    border: 1rem solid $bodyColor;
-  
+    align-items: center;
+    flex-flow: row wrap;  
+
     .game {
       width: 25%;
-    }
+      min-width: 25%;
+      height: 25%;
+      margin: 1.5rem;
+      padding: 1rem;
     
+      img {
+        width: 100%;
+        height: 100%;
+        display: block;
+        border-radius: 0.75rem;
+        //filter:brightness(0.9) grayscale(.25);
+        transition: filter ease 0.1s;
+
+        &:hover {
+          filter: opacity(85%);
+          cursor: pointer;
+        }
+      }
+
+      figcaption {
+        font-size: 1.5rem;
+        font-weight: bold;
+        text-align: center;
+        margin: 0.5rem;
+      }
+    }
   }
