--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,4 +1,6 @@
 @import 'colors';
+@import 'games';
+
 $bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 
 /* This SCSS file covers everything in the default layout */
@@ -14,6 +16,21 @@ body {
   font-family: $bodyFont;
 }
 
+
+@mixin clickable {
+  border-radius: 0.5rem;
+  font-weight: bold;
+  text-decoration: none;
+  transition: background-color ease 0.1s;
+  padding: 0.75rem 1rem;
+  color: $backgroundColor;
+
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
 /* Navigation Bar */
 
 nav {
@@ -25,6 +42,7 @@ nav {
   display: flex;
   justify-content: space-between;
   color: $backgroundColor;
+  z-index: 2;
 
   ul {
     text-align: center;
@@ -40,11 +58,7 @@ nav {
       margin: 0rem 0.25rem;
       
       a {
-        color: $backgroundColor;
-        text-decoration: none;
-        padding: 0.75rem 1rem;
-        border-radius: 0.75rem;
-        
+        @include clickable;
         &:hover {
           background-color: $accentColor;
         }
@@ -55,13 +69,15 @@ nav {
         border: none;
         color: $backgroundColor;
         padding: 0.5rem;
-        border-radius: 0.75rem;
+        border-radius: 0.5rem;
         background-color: $bodyColor;
         height: 49px;
         width: 49px;
+        transition: background-color ease 0.1s;
         
         &:hover {
           background-color: $accentColor;
+          cursor: pointer;
         }
       }
     }
@@ -71,12 +87,12 @@ nav {
       font-weight: bold;
       width: 20rem;
       text-align: center;
-
+      transition: color ease 0.1s;
+      @include clickable;
       &:hover {
-        color: $accentColor;
+        color: $accentColor2;
       }
     }
-    
   }
 }
 
@@ -88,12 +104,7 @@ footer {
   margin: 1rem 0;
 
   a {
-    color: $backgroundColor;
-      text-decoration: none;
-      padding: 0.75rem 1rem;
-      border-radius: 0.75rem;
-      
-      
+    @include clickable;      
     &:hover {
       background-color: $accentColor;
     }
