--- a/_sass/games.scss
+++ b/_sass/games.scss
@@ -30,7 +30,7 @@
         font-size: 1.5rem;
         font-weight: bold;
         text-align: center;
-        margin: 0.5rem;
+        margin-top: 0.5rem;
       }
     }
   }
