--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,5 +1,4 @@
 @import 'colors';
-@import 'games';
 
 $bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 
@@ -8,6 +7,10 @@ $bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-seri
 * {
   margin: 0;
   padding: 0;
+}
+
+html {
+  background: $bodyColor;
 }
 
 body {
@@ -21,13 +24,27 @@ body {
   border-radius: 0.5rem;
   font-weight: bold;
   text-decoration: none;
-  transition: background-color ease 0.1s;
+  transition: background-color ease 0.2s;
   padding: 0.75rem 1rem;
   color: $backgroundColor;
 
   &:hover {
     cursor: pointer;
   }
+}
+
+@mixin icon {
+  font-size: 1.5rem;
+}
+
+@mixin mainPageDisplay {
+  text-align: center;
+  list-style-type: none;
+  text-align: center;
+  margin: 0 0.5rem;
+  padding: 0.5rem;
+  display: flex;
+  align-items: center;
 }
 
 /* Navigation Bar */
@@ -44,14 +61,8 @@ nav {
   z-index: 2;
 
   ul {
-    text-align: center;
-    list-style-type: none;
-    text-align: center;
-    margin: 0 0.5rem;
-    padding: 0.5rem;
-    display: flex;
-    align-items: center;
-    
+    @include mainPageDisplay;
+
     li {
       font-size: 1.15rem;
       margin: 0rem 0.15rem;
@@ -72,7 +83,7 @@ nav {
         background-color: $bodyColor;
         height: 49px;
         width: 49px;
-        transition: background-color ease 0.1s;
+        transition: background-color ease 0.2s;
         
         &:hover {
           background-color: $accentColor;
@@ -81,25 +92,104 @@ nav {
       }
 
       .icon {
-        padding: 0.75rem 0.9rem; /* it only looks good if i do this... */
+        padding: 0.75rem 0.9rem; // it only looks good if i do this...
 
         i {
-          font-size: 1.5rem;
+          @include icon;
         }
       }
     }
-      
 
-    .title {
+    .title { // commented out stuff is from old title that would change if you clicked it
       font-size: 1.75rem;
       font-weight: bold;
-      width: 20rem;
+      // width: 20rem;
       text-align: center;
-      transition: color ease 0.1s;
       @include clickable;
-      &:hover {
-        color: $accentColor2;
+      a {
+        transition: color ease 0.2s;
+
+        &:hover {
+          // color: $accentColor2;
+          background-color: $bodyColor;
+        }
       }
+    }
+
+    #welcome {
+      font-weight: bold;
+      text-align: center;
+      @include clickable;
+
+      &:hover {
+        background-color: $accentColor2;
+      }
+    }
+  }
+
+  .hamburger {
+    @include icon;
+    display: none;
+  }
+}
+
+// Home
+.games {
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+  align-items: center;
+  flex-flow: row wrap;  
+
+  .game {
+    width: 25%;
+    min-width: 300px;
+    height: 25%;
+    margin: 1rem;
+    padding: 1rem;
+  
+    img {
+      width: 100%;
+      height: 100%;
+      display: block;
+      border-radius: 0.75rem;
+      // filter:brightness(0.9) grayscale(.25);
+      transition: filter ease 0.1s;
+
+      &:hover {
+        filter: opacity(85%);
+        cursor: pointer;
+      }
+    }
+
+    figcaption {
+      font-size: 1.5rem;
+      font-weight: bold;
+      text-align: center;
+      margin-top: 0.5rem;
+    }
+
+    .longerTitle { // still  having issues where the title is too big when the window is resized :/
+      font-size: 1.25rem;
+    }
+  }
+}
+
+.aboutMe {
+  padding: 2rem;
+  list-style-type: none;
+  font-size: 2rem;
+
+  .customizable {
+    @include clickable;
+    background-color: $accentColor2;
+  }
+
+  li {
+    margin: 2rem;
+
+    img {
+      max-width: 45%;
     }
   }
 }
@@ -127,4 +217,41 @@ footer {
 .hidden
 {
     display: none !important;
+}
+
+// Mobile Responsiveness
+@media screen and (max-width: 1100px) {
+  #welcome {
+    display: none;
+  }
+
+}
+
+@media screen and (max-width: 800px) {
+  nav {
+    justify-content: center;
+    
+    li:not(.title, .hamburger) {
+      display: none;
+    }
+
+    .hamburger {
+      display: block;
+    }
+
+    .title {
+      font-size: 1rem;
+      min-width: 15rem;
+    }
+  }
+
+  .games {
+    flex-direction: column;
+
+    .game {
+      width: 80%;
+      min-width: 200px;
+      max-width: 30rem;
+    }
+  }
 }
