--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -1,4 +1,4 @@
 $backgroundColor: #fafafa;
 $bodyColor: hsl(270, 6%, 13%);
 $accentColor: #ce2f4e;
-$accentColor2: #67d6ff;
+$accentColor2: #3dbceb;
