--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -143,7 +143,7 @@ nav {
 
   .game {
     width: 25%;
-    min-width: 300px;
+    min-width: 400px;
     height: 25%;
     margin: 1rem;
     padding: 1rem;
@@ -167,11 +167,12 @@ nav {
       font-weight: bold;
       text-align: center;
       margin-top: 0.5rem;
+      white-space: nowrap;
     }
 
-    .longerTitle { // still  having issues where the title is too big when the window is resized :/
-      font-size: 1.25rem;
-    }
+    // .longerTitle { // still  having issues where the title is too big when the window is resized :/
+    //   font-size: 1.25rem;
+    // }
   }
 }
 
@@ -199,7 +200,7 @@ footer {
   color: $backgroundColor;
   text-align: center;
   padding: 1.25rem;
-  margin: 1rem 0;
+  margin-top: 0.5rem 0;
 
   a {
     @include clickable;      
@@ -212,6 +213,11 @@ footer {
     margin-top: 0.75rem;
     font-style: italic;
   }
+}
+
+#backToTop {
+  display: none;
+  margin-bottom: 1rem;
 }
 
 .hidden
@@ -227,7 +233,7 @@ footer {
 
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1000px) {
   nav {
     justify-content: center;
     
@@ -253,5 +259,9 @@ footer {
       min-width: 200px;
       max-width: 30rem;
     }
+  }
+
+  #backToTop {
+    display: block;
   }
 }
