Finished up some pages
- finished up the About Me, Diablo, and Overwatch pages

--- a/_layouts/gamesLayout.html
+++ b/_layouts/gamesLayout.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-
-<div>
-    <h1>{{ page.title }}</h1>
-
-    {{ content }}
+<div class="item">
+    <h1 class="gameTitle">{{ page.title }}</h1>
+    <div class="gamesContainer">
+        {{ content }}
+    </div>
 </div>
