--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -1,4 +1,5 @@
 $backgroundColor: #fafafa;
 $bodyColor: hsl(270, 6%, 13%);
+$mediumColor: hsl(315, 5%, 83%);
 $accentColor: #ce2f4e;
 $accentColor2: #3dbceb;
