--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -55,7 +55,6 @@ img, video {
   @include borderRadius;
   width: 100%;
   height: auto;
-  max-height: 40rem;
   object-fit: contain;
 }
 
@@ -208,13 +207,14 @@ nav {
 }
 
 // Home
-.games {
+.homePageGames {
   display: flex;
   justify-content: center;
   list-style-type: none;
   align-items: center;
   flex-flow: row wrap;  
-  gap: 0.75rem;
+  gap: 1%;
+  margin: 2rem;
 
 
   .game {
@@ -251,11 +251,29 @@ nav {
 
 // individual game pages
 
-.gameTitle {
-  font-size: 4rem;
-  margin: 3rem;
-  text-align: center;
-  text-transform: uppercase;
+.topContainer {
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  gap: 5%;
+
+  .gameTitle {
+    font-size: 4rem;
+    margin: 2rem;
+    text-align: center;
+    text-transform: uppercase;
+  }
+
+  .playButton {
+    @include clickable();
+    background-color: $accentColor;
+    font-size: 1.75rem;
+    padding: 1.5rem 1.75rem;
+
+    &:hover {
+      background-color: $accentColor2;
+    }
+  }
 }
 
 .gamesContainer { // this is a ul
@@ -264,7 +282,7 @@ nav {
   list-style: none;
   justify-content: center;
   align-items: center;
-  gap: 2rem;
+  gap: 1%;
   margin-bottom: 2rem;
 
   .item {
@@ -289,6 +307,11 @@ nav {
     text-align: center;
     font-style: italic;
   }
+
+  .gameAsset {
+    max-width: 50%;
+    margin: 1rem;
+  }
 }
 
 .aboutMe {
@@ -298,7 +321,7 @@ nav {
   justify-content: center;
   align-items: center;
   margin: 5rem 0;
-  gap: 3rem;
+  gap: 5%;
 
   .customizable {
     @include clickable;
@@ -361,7 +384,7 @@ footer {
   display: none;
   justify-content: center;
   font-size: 1.5rem;
-  gap: 0.25rem;
+  gap: 1%;
   margin-bottom: 1rem;
 }
 
@@ -371,6 +394,7 @@ footer {
 }
 
 // Mobile Responsiveness
+
 @media screen and (max-width: 1100px) {
   #welcome {
     display: none;
@@ -411,12 +435,25 @@ footer {
     }
   }
 
+  .topContainer {
+    flex-direction: column;
+    gap: 0;
+    
+    .playButton {
+      margin-bottom: 1rem;
+    }
+  }
+
   .gamesContainer {
     flex-direction: column;
 
     .item {
       min-width: 85%;
       margin: 1rem;
+    }
+
+    .gameAsset {
+      max-width: 70%;
     }
   }
 
