--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
     <script src="https://kit.fontawesome.com/d2216db615.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
+    <link rel="icon" type="image/png" href="/images/Heart.png">
   </head>
 
   <body style="padding-top:78px;"> <!--I wonder if there's a better way to add the space on top-->
