Updated About me page
- readded & updated currently playing games section
- made my name have a gradiant
- added a little note to people to click on the blue buttons!
- (oh I also made the "welcome" at the top look like a blue button, too)

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -153,6 +153,7 @@ nav {
       text-align: center;
       @include clickable;
       font-size: 1.25rem;
+      background-color: $accentColor2;
 
       &:hover {
         background-color: $accentColor2;
@@ -379,6 +380,25 @@ nav {
   }
 }
 
+.secret {
+  font-style: italic;
+  text-align: center;
+  margin-bottom: 3em;
+  font-size: 1.3em;
+  color: $lighterBodyColor;
+
+.exampleCustomizable {
+    background-color: $accentColor2;
+    font-style: normal;
+    border-radius: 0.4rem;
+    font-weight: bold;
+    text-decoration: none;
+    padding: 0.45rem 0.6rem;
+    color: $backgroundColor;
+    filter: opacity(70%);
+  }
+}
+
 footer {
   background-color: $bodyColor;
   color: $backgroundColor;
@@ -438,6 +458,10 @@ footer {
 
 @media screen and (max-width: 1100px) {
   #welcome {
+    display: none;
+  }
+
+  .secret {
     display: none;
   }
 
