--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -1,5 +1,6 @@
 $backgroundColor: #fafafa;
 $bodyColor: hsl(270, 6%, 13%);
+$lighterBodyColor: hsl(270, 3%, 35%);
 $mediumColor: hsl(315, 5%, 83%);
 $accentColor: #ce2f4e;
 $accentColor2: #3dbceb;
