Added color changing buttons to about me page
- also added more stuff to the welcome, about me1, and about me2 arrays!

--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -1,5 +1,5 @@
 $backgroundColor: #fafafa;
-$bodyColor: hsl(270, 6%, 13%);
+$bodyColor: #211f23;
 $lighterBodyColor: hsl(270, 3%, 35%);
 $mediumColor: hsl(315, 5%, 83%);
 $accentColor: #ce2f4e;
