--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -384,18 +384,14 @@ nav {
   font-style: italic;
   text-align: center;
   margin-bottom: 3em;
-  font-size: 1.3em;
-  color: $lighterBodyColor;
+  font-size: 1.5em;
 
-.exampleCustomizable {
+  #exampleCustomizable {
+    @include clickable();
     background-color: $accentColor2;
     font-style: normal;
-    border-radius: 0.4rem;
     font-weight: bold;
-    text-decoration: none;
-    padding: 0.45rem 0.6rem;
     color: $backgroundColor;
-    filter: opacity(70%);
   }
 }
 
