--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -198,13 +198,10 @@ nav {
 
 .hamburgerLink a {
   @include clickable;
-  font-size: 1.15rem;
+  font-size: 1.3em;
   line-height: 3em;
   margin: 1rem;
-
-  &:hover {
-    background-color: $accentColor;
-  }
+  background-color: $accentColor;
 }
 
 // Home
@@ -367,10 +364,11 @@ nav {
     }
 
     .customizaAboutMe {
-      margin: 2rem 0;
-  
+      margin-top: 2rem;
+      
       p {
         display: inline;
+        line-height: 2.2em;
       }
     }
   }
@@ -383,7 +381,7 @@ nav {
 .secret {
   font-style: italic;
   text-align: center;
-  margin-bottom: 3em;
+  margin: 0 5% 3em;
   font-size: 1.5em;
 
   #exampleCustomizable {
@@ -392,6 +390,7 @@ nav {
     font-style: normal;
     font-weight: bold;
     color: $backgroundColor;
+    box-decoration-break: clone;
   }
 }
 
@@ -439,10 +438,11 @@ footer {
 
 // Mobile Responsiveness
 
-#onlyOnMobile{
+.onlyOnMobile{
   display: none;
 }
 
+/*
 @media screen and (max-width: 1300px) {
   .aboutMe {
     .customizaAboutMe {
@@ -461,13 +461,12 @@ footer {
     display: none;
   }
 
-}
+}*/
 
 @media screen and (max-width: 1000px) {
-  #onlyOnMobile{
+  .onlyOnMobile{
     display: block;
   }
-  
   
   nav {
     justify-content: center;
