Fix for Example button
Fixed safari issue with Example button & added more colors

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -391,6 +391,7 @@ nav {
     font-weight: bold;
     color: $backgroundColor;
     box-decoration-break: clone;
+    -webkit-box-decoration-break: clone;
   }
 }
 
