--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -347,7 +347,6 @@ nav {
 
   .aboutMeItem {
     max-width: 55%;
-    //margin-bottom: 2rem;
 
     h1 {
       margin-bottom: 2rem;
@@ -397,10 +396,10 @@ nav {
     text-decoration: none;
     color: $backgroundColor;
     max-width: 30%;
-    min-width: 300px;
+    min-width: 275px;
     text-align: center;
     
-    h3 {
+    h2 {
       font-weight: bold;
       font-size: 2rem;
       color: $backgroundColor;
@@ -481,26 +480,9 @@ footer {
   display: none;
 }
 
-/*
-@media screen and (max-width: 1300px) {
-  .aboutMe {
-    .customizaAboutMe {
-      display: none;
-    }
-  }
+.onlyOnSmallestMobile{
+  display: none;
 }
-
-
-@media screen and (max-width: 1100px) {
-  #welcome {
-    display: none;
-  }
-
-  .secret {
-    display: none;
-  }
-
-}*/
 
 @media screen and (max-width: 1000px) {
   .onlyOnMobile{
@@ -563,6 +545,10 @@ footer {
     flex-direction: column;
     justify-content: center;
     padding: 0;
+
+    .aboutMeItem {
+      max-width: 55%;
+    }
   }
 
   footer p {
@@ -579,6 +565,10 @@ footer {
 }
 
 @media screen and (max-width: 500px) {
+  .onlyOnSmallestMobile {
+  display: block;
+  }
+  
   .homePageGames {
     .game {
       min-width: 100px;
@@ -588,6 +578,12 @@ footer {
     figcaption {
       //font-size: 1.25rem;
       white-space: normal;
+    }
+  }
+
+  .aboutMe {
+    .aboutMeItem {
+      max-width: 75%;
     }
   }
 
