--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -257,6 +257,12 @@ nav {
   }
 }
 
+.borderMedia {
+  border: 3px;
+  border-style: solid;
+  border-color: $mediumColor;
+}
+
 // individual game pages
 
 .topContainer {
