--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -1,6 +1,7 @@
 $backgroundColor: #fafafa;
 $bodyColor: #211f23;
 $lighterBodyColor: hsl(270, 3%, 35%);
+$mediumBodyColor: hsl(270, 2%, 45%);
 $mediumColor: hsl(315, 5%, 83%);
 $accentColor: #ce2f4e;
 $accentColor2: #3dbceb;
