--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -73,13 +73,19 @@ h4 {
 }
 
 hr {
-  margin: 3rem 20%;
+  margin: 2.5rem 20%;
   border: 0.15rem solid $mediumColor;
   border-radius: 1rem;
 }
 
 strong {
   color: $accentColor;
+}
+
+// Highlights
+::selection, ::-moz-selection {
+  background-color: $accentColor;
+  color: $backgroundColor;
 }
 
 .quote {
@@ -106,7 +112,7 @@ nav {
     @include mainPageDisplay;
 
     li {
-      font-size: 1.25rem;
+      font-size: 1.5rem;
       margin: 0rem 0.15rem;
       
       a {
@@ -208,13 +214,30 @@ nav {
 
 .hamburgerLink a {
   @include clickable;
-  font-size: 1.3em;
-  line-height: 3em;
+  font-size: 1.5rem;
+  line-height: 3.75rem;
   margin: 1rem;
   background-color: $accentColor;
 }
 
 // Home
+
+.homePageIntro {
+
+  text-align: center;
+  margin-top: 2rem;
+
+  h1 {
+    font-size: 4rem;
+    font-weight:900;
+    //font-style: italic;
+  }
+
+  h2 {
+    font-size: 2.5rem;
+  }
+}
+
 .homePageGames {
   display: flex;
   justify-content: center;
@@ -370,7 +393,7 @@ nav {
   justify-content: center;
   align-items: center;
   //gap: 1%;
-  margin-bottom: 2rem;
+  margin: 0rem 5% 2rem;
 
   .item {
     min-width: 300px;
@@ -382,6 +405,18 @@ nav {
     li {
       margin-left: 2rem;
       
+    }
+
+    .sectionTitle {
+      font-size: 2.5rem;
+    }
+    
+    .importantItem {
+      font-weight: bold;
+
+      strong {
+        font-weight: bolder;
+      }
     }
   }
 
@@ -421,7 +456,7 @@ nav {
     background-color: $accentColor2;
     box-decoration-break: clone;
     -webkit-box-decoration-break: clone;
-    line-height: 2em;
+    line-height: 2rem;
   }
 
   .aboutMeItem {
@@ -469,14 +504,15 @@ nav {
 .designProcessItem {
     background-color: $accentColor;
     font-size: 1.25rem;
-    padding: 0.75rem 1rem;
+    padding: 1rem 1.5rem;
     margin: 1.25rem;
     border-radius: 1.5rem;
     text-decoration: none;
     color: $backgroundColor;
-    max-width: 30%;
+    max-width: 33%;
     min-width: 275px;
     text-align: center;
+    flex-basis: 0%;
     
     h2 {
       font-weight: bold;
@@ -497,8 +533,8 @@ nav {
 .secret {
   font-style: italic;
   text-align: center;
-  margin: 0 5% 3em;
-  font-size: 1.5em;
+  margin: 0 5% 3rem;
+  font-size: 1.5rem;
 
   #exampleCustomizable {
     @include clickable();
@@ -538,6 +574,7 @@ footer {
 #backToTop {
   display: none;
   margin-bottom: 1.5rem;
+  font-size: 1.5rem;
 }
 
 #bottomLinks {
