Added mobile responsiveness for 2K screens
now fonts & other things resize (usually larger) to accomodate and look nice on 2K or larger screens

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="/images/Heart.png">
   </head>
 
-  <body style="padding-top:78px;"> <!--I wonder if there's a better way to add the space on top-->
+  <body class="topPadding">
     <nav>
       <ul>
         <li class="hamburger">
