Highlight color fix for about me page
And also removed "Declarative" from the overwatch page when talking about the scripting language (its not declarative)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,8 +40,8 @@
     </nav>
     <div>
       <ul id="navLinkList">
-        <li class="hamburgerLink"><a href="index.html">Games</a></li>
-        <li class="hamburgerLink"><a href="about.html">About Me</a></li>
+        <li class="hamburgerLink"><a href="index.html" class="redBackgroundColor">Games</a></li>
+        <li class="hamburgerLink"><a href="about.html" class="redBackgroundColor">About Me</a></li>
         <!-- <li class="hamburgerLink"><a href="art.html">Art</a></li> -->
       </ul>
     </div>
