--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,7 +1,7 @@
 @import 'colors';
 
 $bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-$fontSize: 1rem;
+$fontSize: 1rem; //if i wanna change the font size of EVERYTHING uniformally, just change this.
 
 /* This SCSS file covers everything in the default layout */
 
@@ -87,6 +87,18 @@ strong {
 ::selection, ::-moz-selection {
   background-color: $accentColor;
   color: $backgroundColor;
+}
+
+// Since I chose $accentColor as my highlight color,
+// we need to make things that have a background-color of $accentColor NOT highlight with $accentColor anymore!
+
+.redBackgroundColor {
+  background-color: $accentColor;
+
+  ::selection, ::-moz-selection {
+    background-color: $accentColor2;
+    color: $backgroundColor;
+}
 }
 
 .quote {
@@ -206,7 +218,7 @@ nav {
   justify-content: center; // this is doing nothing???
   align-items: center;
   margin: 0;
-  margin-top: -0.75rem;
+  //margin-top: -0.75rem; // why did i have this here???
 }
 
 .topPadding {
@@ -222,7 +234,7 @@ nav {
   font-size: $fontSize * 1.5;
   line-height: 3.75rem;
   margin: 1rem;
-  background-color: $accentColor;
+  //background-color: $accentColor;
 }
 
 // Home
@@ -253,8 +265,9 @@ nav {
 
   .game {
     max-width: 30%;
-    min-width: 400px;
-    height: 25%;
+    min-width: 30%;
+    //height: 25%;
+    object-fit: fill;
     // margin: 1rem;
     margin: 1rem;
     transition: filter ease 0.1s;
@@ -402,7 +415,7 @@ nav {
   .item {
     min-width: 300px;
     max-width: 35%;
-    margin: 0 1rem;
+    margin: 1rem;
     font-size: $fontSize * 1.25;
     line-height: 2rem;
 
@@ -440,8 +453,10 @@ nav {
   }
 
   .gameAsset {
-    max-width: 50%;
+    max-width: 40%;
+    min-width: 40%;
     margin: 1rem;
+    object-fit: fill;
   }
 }
 
@@ -506,7 +521,7 @@ nav {
 }
 
 .designProcessItem {
-    background-color: $accentColor;
+    //background-color: $accentColor;
     font-size: $fontSize * 1.25;
     padding: 1rem 1.5rem;
     margin: 1.25rem;
