Edited about me description
also removed mentions of being a student

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -222,7 +222,7 @@ nav {
 }
 
 .topPadding {
-    padding-top: 4rem;
+    padding-top: 5rem;
   }
 
 .flex {
@@ -345,6 +345,14 @@ nav {
 
     .CombatDesign {
       background-color: #35bb59;
+    }
+
+    .ClassDesign {
+      background-color: #d31e1e;
+    }
+
+    .HeroDesign {
+      background-color: #e26715;
     }
 
     .Internship {
